# etsi_its_messages

./: .gitignore
etsi_its_msgs/etsi_its_srem_ts_msgs/: CMakeLists.txt  README.md  package.xml
etsi_its_msgs/etsi_its_srem_ts_msgs/msg/: AccelerationConfidence.msg  AccelerationControl.msg  AccidentSubCauseCode.msg  ActionID.msg  AdverseWeatherConditionAdhesionSubCauseCode.msg  AdverseWeatherConditionExtremeWeatherConditionSubCauseCode.msg  AdverseWeatherConditionPrecipitationSubCauseCode.msg  AdverseWeatherConditionVisibilitySubCauseCode.msg  AdvisorySpeed.msg  AdvisorySpeedList.msg  AdvisorySpeedType.msg  AllowedManeuvers.msg  AlphabetIndicator.msg  Altitude.msg  AltitudeConfidence.msg  AltitudeValue.msg  Angle.msg  AntennaOffsetSet.msg  ApproachID.msg  AviEriDateTime.msg  BasicVehicleRole.msg  BatteryStatus.msg  CS1.msg  CS2.msg  CS3.msg  CS4.msg  CS5.msg  CS7.msg  CS8.msg  CauseCode.msg  CauseCodeType.msg  CenDsrcTollingZone.msg  CenDsrcTollingZoneID.msg  ClosedLanes.msg  CollisionRiskSubCauseCode.msg  ComputedLane.msg  ConnectingLane.msg  Connection.msg  ConnectionManeuverAssist.msg  ConnectionManeuverAssistaddGrpC.msg  (+319 more)
etsi_its_msgs/etsi_its_ssem_ts_msgs/: CMakeLists.txt  README.md  package.xml
etsi_its_msgs/etsi_its_ssem_ts_msgs/msg/: AccelerationConfidence.msg  AccelerationControl.msg  AccidentSubCauseCode.msg  ActionID.msg  AdverseWeatherConditionAdhesionSubCauseCode.msg  AdverseWeatherConditionExtremeWeatherConditionSubCauseCode.msg  AdverseWeatherConditionPrecipitationSubCauseCode.msg  AdverseWeatherConditionVisibilitySubCauseCode.msg  AdvisorySpeed.msg  AdvisorySpeedList.msg  AdvisorySpeedType.msg  AllowedManeuvers.msg  AlphabetIndicator.msg  Altitude.msg  AltitudeConfidence.msg  AltitudeValue.msg  Angle.msg  AntennaOffsetSet.msg  ApproachID.msg  AviEriDateTime.msg  BasicVehicleRole.msg  BatteryStatus.msg  CS1.msg  CS2.msg  CS3.msg  CS4.msg  CS5.msg  CS7.msg  CS8.msg  CauseCode.msg  CauseCodeType.msg  CenDsrcTollingZone.msg  CenDsrcTollingZoneID.msg  ClosedLanes.msg  CollisionRiskSubCauseCode.msg  ComputedLane.msg  ConnectingLane.msg  Connection.msg  ConnectionManeuverAssist.msg  ConnectionManeuverAssistaddGrpC.msg  (+319 more)
etsi_its_msgs/etsi_its_ssem_ts_msgs/msg/include/msg/: ANY.h  BIT_STRING.h  BOOLEAN.h  ENUMERATED.h  GraphicString.h  IA5String.h  INTEGER.h  NULL.h  NativeEnumerated.h  NativeInteger.h  NumericString.h  OBJECT_IDENTIFIER.h  OCTET_STRING.h  OPEN_TYPE.h  ObjectDescriptor.h  UTF8String.h  VisibleString.h  aper_decoder.h  aper_encoder.h  aper_opentype.h  aper_support.h  asn_SEQUENCE_OF.h  asn_application.h  asn_bit_data.h  asn_codecs_prim.h  asn_internal.h  asn_ioc.h  constr_CHOICE.h  constr_SEQUENCE.h  constr_SEQUENCE_OF.h  constr_SET_OF.h  constr_TYPE.h  constraints.h  (+372 more)
etsi_its_msgs/etsi_its_ssem_ts_msgs/msg/src/: ANY.c  ANY_aper.c  ANY_jer.c  ANY_uper.c  BIT_STRING.c  BIT_STRING_jer.c  BIT_STRING_print.c  BIT_STRING_rfill.c  BIT_STRING_uper.c  BOOLEAN.c  BOOLEAN_aper.c  BOOLEAN_jer.c  BOOLEAN_print.c  BOOLEAN_rfill.c  BOOLEAN_uper.c  ENUMERATED.c  ENUMERATED_aper.c  ENUMERATED_jer.c  ENUMERATED_uper.c  GraphicString.c  IA5String.c  INTEGER.c  INTEGER_aper.c  INTEGER_jer.c  INTEGER_print.c  INTEGER_rfill.c  INTEGER_uper.c  NULL.c  NULL_aper.c  NULL_jer.c  NULL_print.c  NULL_rfill.c  NULL_uper.c  NativeEnumerated.c  NativeEnumerated_aper.c  NativeEnumerated_jer.c  NativeEnumerated_uper.c  NativeInteger.c  NativeInteger_aper.c  NativeInteger_jer.c  (+432 more)
(+6014 files in other folders)
